5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4144/executions/1585_1015.log
== TEST (2019-03-24 14:15:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1 = int(input(" "))
var2 = int(input(" "))
var3 = int(input(" "))
print(min(var1, var2, var3))
-- OUTPUT:
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 14:24:28) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1 = int(input(" "))
var2 = int(input(" "))
var3 = int(input(" "))
mim = (min(var1, var2, var3))
maxx = (max(var1, var2, vaar3))
inter = ((va1, var2, var3) - mim - maxx)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    maxx = (max(var1, var2, vaar3))
NameError: name 'vaar3' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 14:24:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1 = int(input(" "))
var2 = int(input(" "))
var3 = int(input(" "))
mim = (min(var1, var2, var3))
maxx = (max(var1, var2, var3))
inter = ((va1, var2, var3) - mim - maxx)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    inter = ((va1, var2, var3) - mim - maxx)
NameError: name 'va1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 14:25:14) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1 = int(input(" "))
var2 = int(input(" "))
var3 = int(input(" "))
mim = (min(var1, var2, var3))
maxx = (max(var1, var2, var3))
inter = ((var1, var2, var3) - mim - maxx)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    inter = ((var1, var2, var3) - mim - maxx)
TypeError: unsupported operand type(s) for -: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 14:25:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1 = int(input(" "))
var2 = int(input(" "))
var3 = int(input(" "))
mim = (min(var1, var2, var3))
maxx = (max(var1, var2, var3))
inter = ((var1, var2, var3) - mim - maxx)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    inter = ((var1, var2, var3) - mim - maxx)
TypeError: unsupported operand type(s) for -: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 14:27:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1 = int(input(" "))
var2 = int(input(" "))
var3 = int(input(" "))
mim = (min(var1, var2, var3))
maxx = (max(var1, var2, var3))
inter = (((var1, var2, var3) - mim) - maxx)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    inter = (((var1, var2, var3) - mim) - maxx)
TypeError: unsupported operand type(s) for -: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 14:32:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1 = int(input(" "))
var2 = int(input(" "))
var3 = int(input(" "))
mim = (min(var1, var2, var3))
maxx = (max(var1, var2, var3))
inter = (((var1, var2, var3) - mim) - maxx)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    inter = (((var1, var2, var3) - mim) - maxx)
TypeError: unsupported operand type(s) for -: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 14:33:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1 = int(input(" "))
var2 = int(input(" "))
var3 = int(input(" "))
mim = int(min(var1, var2, var3))
maxx = int(max(var1, var2, var3))
inter = (((var1, var2, var3) - mim) - maxx)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    inter = (((var1, var2, var3) - mim) - maxx)
TypeError: unsupported operand type(s) for -: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 14:35:09) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1 = int(input(" "))
var2 = int(input(" "))
var3 = int(input(" "))
mim = int(min(var1, var2, var3))
maxx = int(max(var1, var2, var3))
inter = (((var1, var2, var3) - mim) - maxx)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    inter = (((var1, var2, var3) - mim) - maxx)
TypeError: unsupported operand type(s) for -: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 14:35:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1 = int(input(" "))
var2 = int(input(" "))
var3 = int(input(" "))
mim = int(min(var1, var2, var3))
maxx = int(max(var1, var2, var3))
inter = (((var1, var2, var3) - mim) - maxx)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    inter = (((var1, var2, var3) - mim) - maxx)
TypeError: unsupported operand type(s) for -: 'tuple' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:47:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1 = int(input(" "))
var2 = int(input(" "))
var3 = int(input(" "))
mim = int(min(var1, var2, var3))
maxx = int(max(var1, var2, var3))
inter = ((var1 + var2 + var3) - mim - maxx)
print(mim)
print(inter)
print(maxx)
-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 12:47:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1 = int(input(" "))
var2 = int(input(" "))
var3 = int(input(" "))
mim = int(min(var1, var2, var3))
maxx = int(max(var1, var2, var3))
inter = ((var1 + var2 + var3) - mim - maxx)
print(mim)
print(inter)
print(maxx)
-- EXECUTION TIME:
0.126122
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
